--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -13,7 +13,8 @@
 Conducting a Java search using pop-up menus</h1>
 
 <div CLASS="Para">A Java search can be conducted using the pop-up menu
-of selected resources and elements in the following views:</div>
+of selected resources and elements in the following views:
+<p>Open the context menu on any Java element visible in a view,</div>
 
 <ul CLASS="UnorderedList">
 <li CLASS="Item">
