--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -20,8 +20,8 @@ and edit a project's build path, follow these steps:</div>
 <ol>
 <div CLASS="Para">Select the project you want to view or edit.</div>
 
+<div CLASS="Para">From the project's pop-up menu, select <b>Properties</b>.</div>
 
-<p CLASS="Para">From the project's pop-up menu, select <b>Properties</b>.
 
 <p CLASS="Para">Select the <b>Java Build Path</b> page.
 
@@ -30,10 +30,11 @@ the build path.
 <li CLASS="Item">
 Click the&nbsp;<span CLASS="Label"><b>Use source folders contained in the
 project</span></b> radio button to use folders instead of the project itself
-to contain source code. Click the<span CLASS="Label"><b>Create New Folder</span></b>
-and&nbsp;<span CLASS="Label"><b>Add Existing Folder</span></b> buttons
-to add source folders to the build path. The&nbsp;<span CLASS="Label"><b>Remove</span></b>
-button removes the selected folder(s) from the build path.</li>
+to contain source code. Click the&nbsp;<span CLASS="Label"><b>Create New
+Folder</span></b> and&nbsp;<span CLASS="Label"><b>Add Existing Folder</span></b>
+buttons to add source folders to the build path. The&nbsp;<span CLASS="Label"><b>Remove</span></b>
+button removes the selected folder(s) from the build path,&nbsp;<span CLASS="Label">Edit</span>
+lets you modify the selected entry.</li>
 
 <li CLASS="Item">
 For simple projects, click the&nbsp;<span CLASS="Label"><b>Use the project
@@ -45,8 +46,8 @@ build path.</li>
 are required for building this project. The list shows all the existing
 projects in the workbench.</div>
 
-<br><b>Note</b>: Each selected project is automatically added to the list
-of referenced projects.
+<p><br><b>Note</b>: Each selected project is automatically added to the
+list of referenced projects.
 
 <p CLASS="Para">On the <b>Libraries</b> page, define the libraries required
 by your project. Libraries come in different forms. There are buttons for
