--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
@@ -9,19 +9,14 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<ol>
 <h1 CLASS="Head">
 Adding a library folder to the build path</h1>
 
-<li>
-A library folder is an ordinary folder containing a collection of class
-files inside the workbench. Use this format for a library when a library
-is not packaged as a JAR file.</li>
+<div CLASS="Head">A library folder is an ordinary folder containing a collection
+of class files inside the workbench. Use this format for a library when
+a library is not packaged as a JAR file.</div>
 
-<br><b>Note</b>: You cannot attach source to a library folder.
-<li>
-</li>
-</ol>
+<ol><b>Note</b>: You cannot attach source to a library folder.</ol>
 To add a library folder to the project's build class path, follow these
 steps:
 <ol>
@@ -48,11 +43,8 @@ the <b>OK</b> button.</li>
 To add an existing class folder, select <b>Add Existing Class Folder</b>
 instead of <b>Create New Class Folder</b> in the steps outlined above and
 select the folder in the dialog that shows up after you press <b>OK</b>.
-<ol>
-<li>
-<img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159></li>
-</ol>
-<a href="../concepts/concepts-4.htm">Java builder</a>
+<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159><a href="../concepts/concepts-4.htm"></a>
+<p><a href="../concepts/concepts-4.htm">Java builder</a>
 <br><a href="../concepts/cbuildcp.htm">Build classpath</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="tasks-113.htm">Adding a JAR file to the build path</a>
@@ -61,8 +53,8 @@ select the folder in the dialog that shows up after you press <b>OK</b>.
 <br><a href="tasks-109.htm">Building manually</a>
 <br><a href="tasks-111.htm">Viewing and editing a project's build path</a>
 <br><a href="tasks-110.htm">Working with build paths</a>
-<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<br><a href="../reference/ref-123.htm">Java Build Path</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159><a href="../reference/ref-123.htm"></a>
+<p><a href="../reference/ref-123.htm">Java Build Path</a>
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
 </html>
