--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -15,15 +15,18 @@ Adding a JAR file to the build path</h1>
 <div class="Para">You can add a JAR file stored either in the workbench
 or anywhere in your file system to the build class path.</div>
 
+<div class="Para">To add a JAR to your build class path follow these steps:</div>
 
-<p class="Para">To add a JAR to your build class path follow these steps:
 <ol>
-<div class="Para">Select the project, and from its pop-up menu, select
-<b>Properties</b>.</div>
+<div class="Para">
+<li>
+Select the project, and from its pop-up menu, select
+<b>Properties</b>.</li>
+</div>
 
+<div class="Para">In the Properties dialog, select the <b>Java Build Path</b>
+page.</div>
 
-<p class="Para">In the Properties dialog, select the <b>Java Build Path</b>
-page.
 
 <p class="Para">Click the <b>Libraries</b> tab.
 
