--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -16,33 +16,35 @@ Adding a classpath variable entry</h1>
 path, follow these steps:</div>
 
 <ol>
-<div class="Para">Select the project you want to add a variable class path
-entry to.</div>
+<div class="Para">
+<li>
+Select the project you want to add a variable class path entry to.</li>
+</div>
 
+<div class="Para">From the project's pop-up menu, select <b>Properties</b>.</div>
 
-<p class="Para">From the project's pop-up menu, select <b>Properties</b>.
+<li class="Para">
+In the Properties page, select the Java Build Path page.</li>
 
-<p class="Para">In the Properties page, select the Java Build Path page.
+<div class="Para">On the <b>Libraries</b> tab, click&nbsp;<span class="Label"><b>Add
+Variable</span></b> for adding a variable that refers to a JAR file.</div>
 
-<p class="Para">On the <b>Libraries</b> tab, click&nbsp;<span class="Label"><b>Add
-Variable</span></b> for adding a variable that refers to a JAR file.
-<br><b>Note</b>: The JRE_LIB variable entry is automatically included for
-each new project. This variable refers to the runtime JAR of the workbench's
-default JRE.
-<br>The Classpath Variable Selection page appears. This page allows you
-to browse the existing variable definitions.
+<p><br>The New Variable Classpath Entry dialog appears. This page shows
+all available classpath variables. You can&nbsp;<span class="Label">Edit</span>
+a variable or create a new variable with&nbsp;<span class="Label">Add</span>.
+<br>&nbsp;
+<li class="Para">
+Select the variable to be used in the variable path. If the variable resolves
+to a folder, you have to specify a path extension that points to a JAR.
+To do this press the&nbsp;<span class="Label">Extend</span> button. If
+the variable already resolves to a JAR file you can click&nbsp;<span class="Label">OK</span>
+directly.</li>
+</ol>
 
-<p class="Para">In the&nbsp;<span class="Label"><b>Variable Name</span></b>
-field, you can select a variable from the list of defined class path variables
-to add to the class path of this project.
-
-<p class="Para">In the&nbsp;<span class="Label"><b>Path Extension</span></b>
-field, define the path relative to the variable.
-
-<p class="Para">The&nbsp;<span class="Label"><b>Resolved Path</span></b>
-field updates with the current value of the variable.
-
-<p class="Para">Click&nbsp;<span class="Label"><b>OK</span></b>.</ol>
+<div class="Para"><b>Hint</b>: You can add multiple variable entries at
+once to the build path: Select more than one variable in the New Variable
+Classpath Entry dialog, or multiple JAR files in the Variable Extension
+dialog.</div>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/cclsspthv.htm">Classpath variables</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
@@ -52,7 +54,8 @@ field updates with the current value of the variable.
 <br><a href="tasks-118.htm">Deleting a class path variable</a>
 <br><a href="tasks-111.htm">Viewing and editing a project's build path</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-15.htm">Classpath Variables preference page</a>
+<p><a href="../../../reference/ref-123.htm">Java Build Path</a>
+<br><a href="../reference/ref-15.htm">Classpath Variables preference page</a>
 <br>&nbsp;
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
