--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-117.htm
@@ -15,19 +15,23 @@ Defining a class path variable</h1>
 <div CLASS="Para">Classpath variables are stored global to the workbench;
 in other words, all projects in the workbench share the class path variables.</div>
 
+<div CLASS="Para">To add or change a class path variable, follow these
+steps:</div>
 
-<p CLASS="Para">To add or change a class path variable, follow these steps:
 <ol>
-<div CLASS="Para">From the menu bar, select <b>Workbench</b> > <b>Preferences</b>.</div>
+<div CLASS="Para">
+<li>
+From the menu bar, select <b>Workbench</b> > <b>Preferences</b>.</li>
+</div>
 
+<div CLASS="Para">Expand the <b>Java</b> category in the left pane, and
+select
+<b>Classpath Variables</b>.</div>
 
-<p CLASS="Para">Expand the <b>Java</b> category in the left pane, and select
-<b>Classpath
-Variables</b>.
+<li CLASS="Para">
+This page allows you to add, edit, or remove class path variables.</li>
 
-<p CLASS="Para">This page allows you to add, edit, or remove class path
-variables.
-<ul CLASS="UnorderedList">
+<ol CLASS="UnorderedList">
 <li CLASS="Item">
 To add a new class path variable, click the&nbsp;<span CLASS="Label"><b>Add</span></b>
 button. The New Variable Entry page opens.</li>
@@ -40,20 +44,26 @@ button. The Edit Variable Entry page opens.</li>
 <br><b>Note</b>: The reserved class path variables, JRE_LIB, JRE_SRC, and
 JRE_SRCROOT cannot be edited in this page. To change them, change the default
 workbench JRE on the Installed JREs page (<b>Workbench</b> > <b>Preferences</b>
-> <b>Java</b> > <b>Installed JREs</b>).</ul>
+> <b>Java</b> > <b>Installed JREs</b>).</ol>
 
-<div CLASS="Para">Type a name for the variable in the<span CLASS="Label"><b>Name</span></b>
-field.</div>
+<div CLASS="Para">
+<li>
+Type a name for the variable in the&nbsp;<span CLASS="Label"><b>Name</span></b>
+field.</li>
+</div>
 
-
-<p CLASS="Para">Type a path to be referenced by the variable in the<span CLASS="Label"><b>Path</span></b>
+<li CLASS="Para">
+Type a path to be referenced by the variable in the&nbsp;<span CLASS="Label"><b>Path</span></b>
 field. You can also click the&nbsp;<span CLASS="Label"><b>File</span></b>
 or&nbsp;<span CLASS="Label"><b>Folder</span></b> buttons to browse the
-file system.
+file system.</li>
 
-<p CLASS="Para">Click&nbsp;<span CLASS="Label"><b>OK</span></b> when you
-are done. The new or modified variable appears in the Defined class path
-variables list on the Preferences page.</ol>
+<br>&nbsp;
+<li CLASS="Para">
+Click&nbsp;<span CLASS="Label"><b>OK</span></b> when you are done. The
+new or modified variable appears in the&nbsp;<span CLASS="Label">Defined
+class path variables</span> list on the Preferences page.</li>
+</ol>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/cclsspthv.htm">Classpath variables</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
