--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-118.htm
@@ -15,22 +15,27 @@ Deleting a class path variable</h1>
 <div CLASS="Para">To delete an existing class path variable:</div>
 
 <ol>
-<div CLASS="Para">From the menu bar, select <b>Workbench</b> > <b>Preferences</b>.</div>
+<div CLASS="Para">
+<li>
+From the menu bar, select <b>Workbench</b> > <b>Preferences</b>.</li>
+</div>
 
+<div CLASS="Para">Expand the <b>Java</b> category in the left pane, and
+select
+<b>Classpath Variables</b>.</div>
 
-<p CLASS="Para">Expand the <b>Java</b> category in the left pane, and select
-<b>Classpath
-Variables</b>.
-
-<p CLASS="Para">Select the variable(s) you want to delete in the&nbsp;<span CLASS="Label">Defined
+<br>&nbsp;
+<li CLASS="Para">
+Select the variable(s) you want to delete in the&nbsp;<span CLASS="Label">Defined
 class path variables</span> list and click the&nbsp;<span CLASS="Label"><b>Remove</span></b>
 button. The variable(s) are removed from the classpath variables list on
-the preferences page.</ol>
+the preferences page.</li>
+</ol>
 
 <div CLASS="Para"><b>Note</b>: The reserved class path variables, JRE_LIB,
-JRE_SRC, and JRE_SRCROOT cannot be deleted.</div>
-
-<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+JRE_SRC, and JRE_SRCROOT cannot be deleted.
+<br>&nbsp;</div>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/cclsspthv.htm">Classpath variables</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="tasks-114.htm">Adding a variable class path entry</a>
