--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
@@ -13,35 +13,42 @@
 <h1>
 Setting advanced options</h1>
 
-<div class="head">1.<span style='font:7.0pt "Times New Roman"'></span>Follow
-the procedure for creating a JAR file, but click&nbsp;<span 
-class=label><b>Next</span></b>
-in the last step to go to the JAR Packaging Options page.</div>
-
-
-<p class="head">2.<span style='font:7.0pt "Times New Roman"'></span>If
-you want to save the JAR file description, select the&nbsp;<span 
-class=label><b>Save
-the description of this JAR in the workspace</span></b> check box.
-
-<p class="head">3.<span style='font:7.0pt "Times New Roman"'></span>Choose
-whether warnings and errors or both should be presented in a dialog after
-JAR creation. It might be useful to disable these options if a JAR description
-is created and you want to recreate one or more JAR files without having
-to read error dialogs. The compiler is able to generate CLASS files even
-when source contains errors. You have the option to exclude CLASS (but
-not source) files with compile errors. These files will be reported at
-the end, if reporting is enabled.
-
-<p class="para">4.<span style='font:7.0pt "Times New Roman"'></span>You
-can choose to exclude CLASS (but not source) files that have compile warnings.
-These files will be reported at the end, if reporting is enabled.
-<br><b>Note</b>: This option does not automatically exclude class files
-with compile errors.
-
-<p class="para">5.<span style='font:7.0pt "Times New Roman"'></span>Click&nbsp;<span class=label><b>Finish</span></b>
-to create the JAR file immediately or&nbsp;<span class=label><b>Next</span></b>
-if you want to change the default manifest.
+<ol>
+  <li><p>Follow the procedure for creating a JAR file, but click <span class=label>
+  <b>Next</b></span> in the last step to go to the JAR Packaging Options 
+    page.</p></li>
+    <li>
+      <p>If you want to save the JAR file description, select the <span class=label> 
+        <b>Save the description of this JAR in the workspace</b></span> check 
+        box.</p>
+    </li>
+    <li>
+      <p>The compiler is able to generate CLASS files even when source contains 
+        errors. You have the option to exclude CLASS (but not source) files with 
+        compile errors. These files will be reported at the end, if reporting 
+        is enabled.</p>
+    </li>
+    <li>
+      <p>You can choose to exclude CLASS (but not source) files that have compile 
+        warnings. These files will be reported at the end.<br>
+        <b>Note</b>: This option does not automatically exclude class files with 
+        compile errors.</p>
+    </li>
+    <li>
+      <p>You can choose to include the source folder path by selecting the <b>Create 
+        source folder structure</b> checkbox.</p>
+    </li>
+    <li>
+      <p>Select the <b>Build projects if not built automatically</b> checkbox 
+        if you want the export to perform a build before creating the JAR file.</p>
+    </li>
+    <li>
+      <p> Click <span class=label><b>Finish</b></span> to create the JAR file 
+        immediately or <span class=label><b>Next</b></span> if you want to change 
+        the default manifest.</p>
+    </li>
+	</ol>
+<br>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <br><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
