--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
@@ -20,6 +20,11 @@
 <h1><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></h1>
 <p> <a href="tasks-207.htm">Using JUnit</a><br>
 </p>
+<p><img src="../images/ngrelr.gif" alt="Related reference" NOSAVE border=0 height=27 width=159> 
+</p>
+<p><a href="../reference/ref-preferences-junit.htm">JUnit preference page</a> 
+<p>
+<p>&nbsp; </p>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </p>
 </body>
