*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -133,7 +133,7 @@ is to start from scratch using the factory methods on <b><a href="../reference/a
 <h4>
 Creating an AST from an existing compilation unit
 </h4>
-This is archieved with the parse methods on <b><a href="../reference/api/org/eclipse/jdt/core/dom/AST.html">AST</a></b>.
+This is achieved with the parse methods on <b><a href="../reference/api/org/eclipse/jdt/core/dom/AST.html">AST</a></b>:
 <ul>
 <li><a href="../reference/api/org/eclipse/jdt/core/dom/AST.html#parseCompilationUnit(char[])">parseCompilationUnit(char[])</a> This method should be used if you simply
 want to create a <b><a href="../reference/api/org/eclipse/jdt/core/dom/CompilationUnit.html">CompilationUnit</a></b> without any binding resolution. Only syntax errors are
