--- a/bundles/org.eclipse.platform.doc.isv/guide/arch_extension_points.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch_extension_points.htm
@@ -15,7 +15,7 @@ Defining an extension point</H2>
 <P >
 When you want to allow other plug-ins to extend or customize the functionality of
 your plug-in, you should define an <b>extension point</b>.  As with extensions,
-the first step in defining an extension point is to added some markup to the <b>plugin.xml</b>
+the first step in defining an extension point is to add some markup to the <b>plugin.xml</b>
 file of your plug-in.  Here is an example:</P>
 <font color='#4444CC'><pre>
    &lt;?xml version=&quot;1.0&quot; ?&gt;
