*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -16,10 +16,10 @@ JDT Core options are accessible from a few APIs.
 All of these APIs are located in <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html">JavaCore</a>.
 Only four methods are necessary to manipulate the options:
 <ul>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getDefaultOptions()">JavaCore.getDefaultOptions()</a> - Answer the default value of the options.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOption(java.lang.String)">JavaCore.getOption()</a> - Answer the value of a specific option.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answer the current values of the options.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions()</a> - Replace the options values by new values.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getDefaultOptions()">JavaCore.getDefaultOptions()</a> - Answers the default value of the options.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOption(java.lang.String)">JavaCore.getOption()</a> - Answers the value of a specific option.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answers the current values of the options.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions()</a> - Replaces the options values by new values.</li>
 </ul>
 </P>
 
