*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
@@ -100,7 +100,7 @@ or   ZIP file. (Child of <a href="../reference/api/org/eclipse/jdt/core/IJavaPro
       </td>
       <td>
       <p class="CellBody"> Represents a Java source (<b>.java</b>) file. (Child
-of &nbsp;<b><a href="../reference/api/org/eclipse/jdt/core/IPackageFragment.html">
+of <a href="../reference/api/org/eclipse/jdt/core/IPackageFragment.html"><b>
      IPackageFragment</a>
       </b> )</p>
       </td>
@@ -248,7 +248,7 @@ to  get Java elements from  their corresponding resources.</p>
 <p><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html"><b>JavaCore</b></a>
         is also used to maintain the Java class path, including locations 
 for   finding  source code and libraries, and locations for generating output 
-binary  (<b>  .class</b>) files.</p>
+binary  (<b>.class</b>) files.</p>
 <p>When you create a Java project from a simple project, <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html"><b>
         JavaCore</b></a>
       will check to see if the project is configured with the Java nature.&nbsp; 
@@ -268,10 +268,9 @@ Java   behavior.&nbsp; This nature (<b>org.eclipse.jdt.core.JavaCore#NATURE_ID</
 </b> to assign the Java nature to the project in addition to their own custom
   natures or behavior.</p>
 <p><a href="../reference/api/org/eclipse/jdt/core/IJavaModel.html"><b> IJavaModel</b></a>
-        can be considered the parent of all projects in the workspace that
- have   the Java project nature (and therefore can be treated as an <a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html"><b>
-       IJavaProject</b></a>
-       .)</p>
+       can be considered the parent of all projects in the workspace that have
+       the Java project nature (and therefore can be treated as an <a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html"><b>
+       IJavaProject</b></a>).</p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif">
 </a>
 </p>
