--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -63,8 +63,7 @@ Icons</h2>
     <tr>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-10.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-        <p CLASS="Para">Project (open)</p>
-      </td>
+        Project (open)      </td>
     </tr>
     <tr>
       <td COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-11.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
@@ -73,7 +72,7 @@ Icons</h2>
     <tr>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-12.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left">
-        <p CLASS="Para">Folder</p>
+       Folder
       </td>
     </tr>
     <tr>
