Fixed ref to Perspective menu

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
@@ -19,7 +19,7 @@ structured view of the editor contents and assist the user in navigating through
 the contents of the editor.</P>
 <P >
 The workbench provides a standard <b>Outline</b> view for this purpose.&nbsp;
-The workbench user controls when this view is visible using the <b>Perspective-&gt;Show
+The workbench user controls when this view is visible using the <b>Window &gt; Show
 View</b> menu.</P>
 <P >Since the generic
 <a href="../reference/api/org/eclipse/ui/editors/text/TextEditor.html"><b> TextEditor</b></a> 
