--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -18,7 +18,7 @@ The Navigator view provides a hierarchical view of the resources in the Workbenc
 From here, you can open files for editing, or select resources for operations such
 as exporting.&nbsp;
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image241_nav_view.jpg" alt="Picture of Navigator view showing a simple hierarchy (project, folders, files)"></P>
+<img align="texttop" border="0" src="../images/Image241_nav_view.jpg" alt="Picture of Navigator view showing a simple hierarchy (project, folders, files)" width="198" height="251"></P>
 <P CLASS="Para">
 Right-click on any resource in the Navigator view to open a pop-up menu that
 allows you to perform operations such as copying, moving, creating new
@@ -61,22 +61,22 @@ Icons</h2>
   </thead>
   <tbody>
     <tr>
-      <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-10.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
+      <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-10.gif" alt=" Open project icon" ALIGN="BASELINE" width="16" height="16"></td>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left">
         Project (open)      </td>
     </tr>
     <tr>
-      <td COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-11.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
+      <td COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-11.gif" alt="Closed project icon" ALIGN="BASELINE" width="16" height="16"></td>
       <td COLSPAN="1" valign="top" align="left">Project (closed)</td>
     </tr>
     <tr>
-      <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-12.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
+      <td ROWSPAN="1" COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-12.gif" alt="Folder icon" ALIGN="BASELINE" width="16" height="16"></td>
       <td ROWSPAN="1" COLSPAN="1" valign="top" align="left">
        Folder
       </td>
     </tr>
     <tr>
-      <td COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-15.gif" alt=" " ALIGN="BASELINE" width="16" height="16"></td>
+      <td COLSPAN="1" valign="top" align="left"><img SRC="../images/ref-15.gif" alt="File icon" ALIGN="BASELINE" width="16" height="16"></td>
       <td COLSPAN="1" valign="top" align="left"> File</td>
     </tr>
   </tbody>
