--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -86,9 +86,9 @@ In the <i> File name </i> field, type a unique name for an .ini file. Do not use
   </li>
   <li>
 <P CLASS="Para">
-Since the Workbench does not have any editors registered for .ini files, it
-launches an external editor on the file. For the moment, close this external
-editor. </P>
+Since the Workbench does not have any editors registered for .ini files, it may
+launch an external editor on the file if one is registered with the operating
+system. For the moment, close the editor. </P>
   </li>
 </ol>
 <P>Now that we have created our resources, the Navigator view shows our two
