--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-3e.htm
@@ -26,6 +26,8 @@
     button.</li>
   <li>(Optional) If you want to save your changes, select <b>Window &gt; Save 
     Perspective As</b> from the main menu bar.</li>
+  <li>Note that a group of stacked views can be dragged using the empty space to
+    the right of the view tabs.</li>
 </ol>
 
 <p>You can also move a view by using the pop-up menu for the view. (Left-click
