--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -13,7 +13,7 @@ Tiling Editors</h3>
 <P CLASS="Para">
 The Workbench allows you to create two or more sets of editors in the editor
 area. You can also resize the editor area but you cannot drag views into the editor
-area or tear off editors from&nbsp; the Workbench window.</P>
+area.</P>
 <ol>
   <li>
 <P CLASS="Para">
