--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_define.htm
@@ -21,25 +21,14 @@ Here is the markup for the CVS client.</P>
     point=&quot;org.eclipse.team.core.repository&quot;&gt;
       &lt;repository
             class=&quot;org.eclipse.team.internal.ccvs.core.CVSTeamProvider&quot;
-            id=&quot;org.eclipse.team.cvs.core.cvsnature&quot;&gt;
+            id=&quot;org.eclipse.team.cvs.core.cvsprovider&quot;&gt;
       &lt;/repository&gt;
 &lt;/extension&gt;</pre>
 <p>This registers your team provider with the team support plug-in and assigns
 an id that should be used when your provider is associated with a project.&nbsp;
 The specified <b>class</b> for the repository must extend <b><a href="../reference/api/org/eclipse/team/core/RepositoryProvider.html">RepositoryProvider</a></b>.
 </p>
-<blockquote>
-  <p><i>Note:&nbsp; In earlier implementations of the platform team support,
-  project natures were used to identify team providers.&nbsp; This is why you'll
-  often see project nature ids used as repository ids.&nbsp; This is just a
-  legacy of an evolving design.</i>
+<p></font><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a>
 </p>
-</blockquote>
-</font>
-
-
-
-
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
 </BODY>
 </HTML>
