--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_debug.htm
@@ -71,16 +71,14 @@ the action as you would any other Java code.</p>
 <p>A common runtime problem is improperly accessing UI code from the thread that
 invokes the active help.&nbsp; If your live help action came from code that ran
 originally in a UI thread, it will need to be modified to handle the fact that
-it is running from a non-UI thread.&nbsp; In our example, we are reusing a
-workbench action that is expected to be invoked from the UI thread, so our help
-action must wrap that code in a <b>syncExec</b> call.</p>
+it is running from a non-UI thread.&nbsp; </p>
 
 
 <pre><font color="#4444CC">	public void run() {
 		// Active help does not run on the UI thread, so we must use syncExec
 		Display.getDefault().syncExec(new Runnable() {
 							public void run() {
-								new OpenPreferencesAction().run();
+								//do the UI work in here;
 							}
 		});		
 	}
