--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_invoke.htm
@@ -39,8 +39,8 @@ plug-ins.&nbsp;&nbsp; Then we can refer to the <b>org.eclipse.help</b> plug-in. 
 
 <pre ><font color="#4444CC"> &lt;a href='javascript:liveAction(
 	&quot;org.eclipse.platform.doc.isv&quot;, 
-	&quot;org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenPreferencesAction&quot;,
-	&quot;&quot;)'&gt;Click here for Preferences.&lt;/a&gt;</font></pre>
+	&quot;org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenDialogAction&quot;,
+	&quot;&quot;)'&gt;Click here for a Message.&lt;/a&gt;</font></pre>
 
 
 <P >The parameters for <b>liveAction </b> are&nbsp; </P>
