--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -23,13 +23,13 @@ Dialog,&quot; your on-line help can include a link that will open the
 Preferences Dialog for the user.&nbsp; Active help links look like hyperlinks in
 the on-line help.</p>
 
-<p>Below is an active help link that takes you to the preferences dialog.&nbsp;
+<p>Below is an active help link that opens a message dialog in the workbench.&nbsp;
 We will take a look at how to make this work.</p>
 
 <p><a href='javascript:liveAction(
 	"org.eclipse.platform.doc.isv", 
-	"org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenPreferencesAction",
-	"")'>Click here to open the preferences dialog.</a></p>
+	"org.eclipse.platform.doc.isv.activeHelp.ActiveHelpOpenDialogAction",
+	"")'>Click here for a Message.</a></p>
 
 <p>&nbsp;</p>
 
