*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active.htm
@@ -18,9 +18,9 @@ documentation.&nbsp;It is implemented by including some JavaScript in your
 documentation that describes a class that should be run inside the Eclipse
 platform. </p>
 
-<p>For example, instead of writing, &quot;Go to the Window Menu and open the Preferences
-Dialog,&quot; your on-line help can include a link that will open the
-Preferences Dialog for the user.&nbsp; Active help links look like hyperlinks in
+<p>For example, instead of writing, &quot;Go to the Window Menu and open the
+message dialog,&quot; your on-line help can include a link that will open your
+application's message dialog for the user.&nbsp; Active help links look like hyperlinks in
 the on-line help.</p>
 
 <p>Below is an active help link that opens a message dialog in the workbench.&nbsp;
