--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -39,7 +39,13 @@ dialog. We don't need any information from the JavaScript, so the
 initialization data is ignored.</p>
 
 
-<pre><font color="#4444CC">/**
+<pre><font color="#4444CC">package org.eclipse.platform.doc.isv.activeHelp;
+
+import org.eclipse.help.ILiveHelpAction;
+import org.eclipse.jface.dialogs.MessageDialog;
+import org.eclipse.swt.widgets.*;
+import org.eclipse.ui.*;
+/**
  * Sample Active Help action.
  */
 public class ActiveHelpOpenDialogAction implements ILiveHelpAction {
