[TB] added link to copyright image

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -53,7 +53,7 @@ the desktop to the workbench using drag-and-drop.
 <p><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
 <br><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1028" ></div>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></div>
 
 </body>
 </html>
