--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-81.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-81.htm
@@ -16,7 +16,7 @@ The goal of refactoring support is to improve your code without changing its beh
 You can execute a refactoring in one of two different ways. </P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
