--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
@@ -30,7 +30,7 @@ the selection doesn't mark the condition part of an if/then/else, do/while, or w
 On the problems pages, you can press F1 to link to a detailed description of errors. </P>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
 
