--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-170.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-170.htm
@@ -75,6 +75,6 @@
 
 </div>
 
-<p><br><img SRC="../images/ngibmcpy.gif">
+<p><br><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </body>
 </html>
