--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -38,7 +38,7 @@ have only a file extension but no file name, such as&nbsp;<span class=filename>.
 Filters</a>
 <br><a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
 <br>&nbsp;
-<p><img SRC="../images/ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></div>
 
 </body>
 </html>
