--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -37,7 +37,7 @@ src="../images/ngrelr.gif" alt="Related reference"></p>
     Formatter preferences</a></p>
   <p></p>
   <p><br>
-    <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
+    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </div>
 </body>
 </html>
