--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
@@ -61,7 +61,7 @@ src="../images/ngrelr.gif" alt="Related reference"></p>
     <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
     <a href="../reference/ref-23.htm">Refactoring preferences</a></p>
   <p><br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </div>
 </body>
 </html>
