--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -46,7 +46,9 @@ once to the build path: Select more than one variable in the New Variable
 Classpath Entry dialog, or multiple JAR files in the Variable Extension
 dialog.</div>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
-<p><a href="../concepts/cclsspthv.htm">Classpath variables</a>
+<p>
+<a href="../concepts/cclsspthv.htm">Classpath variables</a>
+<br><a href="../concepts/cbuildcp.htm">Build classpath</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="tasks-116.htm">Attaching source to a class path variable</a>
 <br><a href="tasks-11.htm">Creating Java elements</a>
@@ -54,8 +56,8 @@ dialog.</div>
 <br><a href="tasks-118.htm">Deleting a class path variable</a>
 <br><a href="tasks-111.htm">Viewing and editing a project's build path</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
-<p><a href="../../../reference/ref-123.htm">Java Build Path</a>
 <br><a href="../reference/ref-15.htm">Classpath Variables preference page</a>
+<br><a href="../reference/ref-123.htm">Build path properties page</a>
 <br>&nbsp;
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a>
 </body>
