--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-6.htm
@@ -31,8 +31,7 @@ is open.
 <p><a href="tasks-54.htm">Using the Java editor</a><a href="tasks-54.htm"></a>
 
 <p class="para"><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<div class="para"><a href="../reference/ref-5.htm">Java Editor Toolbar
-actions</a></div>
+<div class="para"><a href="../reference/ref-java-editor.htm">Java editor</a></div>
 
 <p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
