[TB] entered link to stylesheet

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-32.htm
@@ -2,7 +2,9 @@
 <HEAD>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
+<link REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+</HEAD>
+<body bgcolor="#FFFFFF">
 <h1 CLASS="Head">
 Creating JAR Files</h1>
 
