--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -3,10 +3,11 @@
 <head>
 <title>Creating JUnit tests</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-<body text="#000000" bgcolor="#FFFFFF">
+<body bgcolor="#FFFFFF">
 
-<body bgcolor="#FFFFFF" text="#000000">
+
 <h1>Creating JUnit tests </h1>
 To develop JUnit tests follow these steps to set-up your project: 
 <ol>
