--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-211.htm
@@ -2,6 +2,7 @@
 <head>
 <title>Debugging a Test Failure</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
