--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-209.htm
@@ -24,10 +24,13 @@
   <li>Select <b>Java &gt; Junit</b> from the left pane and <b>TestSuite</b> from 
     the right pane</li>
   <li>Press <b>Next</b></li>
+  <br>
+  <img src="../images/tasks-209a.gif" alt="TestSuite creation wizard"> 
   <li>In the <b>Source folder</b> field, enter the name of the source folder in 
     which the test suite will be created.</li>
   <li>In the <b>Package</b> field, enter the name of the package (empty name denotes 
     the default package) in which the test suite will be created.</li>
+  <li>In the <b>Test suite</b> field, enter the name of the test suite class.</li>
   <li>In the preseneted list of classes, select the test classes for which you 
     want to create the test suite.</li>
   <li>Press <b>Finish</b>.</li>
