--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -33,6 +33,8 @@ To develop JUnit tests follow these steps to set-up your project:
   <li>Select <b>Java &gt; Junit</b> in the left pane and <b>TestCase</b> in the 
     right pane</li>
   <li>Press <b>Next</b> </li>
+  <br>
+  <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1"> 
   <li>In the <b>Source Folder</b> field, enter the name of the source folder in 
     which your test will be created. You can use the <b>Browse</b> button and 
     select the source folder from the resutling dialog.</li>
@@ -55,7 +57,8 @@ To develop JUnit tests follow these steps to set-up your project:
         or</li>
       <li>press <b>Next</b> to select the public methods that you want to test</li>
     </ul>
-  </li>
+  </li><br>
+  <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2"> 
   <li>Use the checkbox tree control to select the methods for which you want the 
     wizard to create tests</li>
   <li>Select the <b>Create tasks for generated Test methods</b> if you want to 
