--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_preview_manip.htm
@@ -22,7 +22,7 @@
   editor's content to disk or revert it back to its original content. Below is 
   a code snippet that opens a compilation unit in an editor and then uses the 
   working copy created by the editor to perfrom the actual changes:</p>
-<pre><font color="#4444CC">void modifyCompilationUnit(ICompilationUnit cunit) throws PartInitException, CoreException {<br>	IEditorPart editor= JavaUI.openInEditor(cunit);<br>	IEditorInput input= editor.getEditorInput();<br>	IWorkingCopyManager manager= JavaUI.getWorkingCopyManager();<br>	try {<br>		manager.connect(input);<br>		ICompilationUnit workingCopy= manager.getWorkingCopy(input);<br>		// do the modifications on workingCopy using the normal JDT Core API.
+<pre><font color="#4444CC">void modifyCompilationUnit(ICompilationUnit cunit) throws PartInitException, CoreException {<br>	IEditorPart editor= JavaUI.openInEditor(cunit);<br>	IEditorInput input= editor.getEditorInput();<br>	IWorkingCopyManager manager= JavaUI.getWorkingCopyManager();<br>	manager.connect(input);<br>	try {<br>		ICompilationUnit workingCopy= manager.getWorkingCopy(input);<br>		// do the modifications on workingCopy using the normal JDT Core API.
 	} finally {<br>		manager.disconnect(input);<br>	}<br>	// either keep the editor dirty or use editor.doSave(IProgressMonitor monitor)
 	// to save the changes programmatically.<br>}</font><br></pre>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"> </a> 
